add lyrics and trackNumber
